--- a/package.json
+++ b/package.json
@@ -2,19 +2,6 @@
   "name": "angular",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "@angular/animations": "^13.2.0",
-    "@angular/common": "^13.2.0",
-    "@angular/compiler": "^13.2.0",
-    "@angular/core": "^13.2.0",
-    "@angular/forms": "^13.2.0",
-    "@angular/platform-browser": "^13.2.0",
-    "@angular/platform-browser-dynamic": "^13.2.0",
-    "@angular/router": "^13.2.0",
-    "rxjs": "^7.5.2",
-    "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
-  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,10 +10,34 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "dependencies": {
+    "@angular/animations": "^13.2.0",
+    "@angular/cdk": "^13.2.0",
+    "@angular/common": "^13.2.0",
+    "@angular/compiler": "^13.2.0",
+    "@angular/core": "^13.2.0",
+    "@angular/forms": "^13.2.0",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^13.2.0",
+    "@angular/platform-browser": "^13.2.0",
+    "@angular/platform-browser-dynamic": "^13.2.0",
+    "@angular/router": "^13.2.0",
+    "@popperjs/core": "^2.10.2",
+    "angular-ng-autocomplete": "^2.0.5",
+    "bootstrap": "^5.1.2",
+    "jquery": "^3.6.0",
+    "ng-autocomplete": "^1.0.0",
+    "ng-connection-service": "^1.0.4",
+    "ngx-print": "^1.2.1",
+    "rxjs": "^7.5.2",
+    "tslib": "^2.3.1",
+    "zone.js": "^0.11.4"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "~11.0.4",
+    "@types/lodash": "^4.14.175",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
